--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
         "laravelcollective/html": "^5.4",
-        "doctrine/dbal": "v2.5.13"
+        "doctrine/dbal": "v2.5.13",
+        "barryvdh/laravel-cors": "*"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
